--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -5,7 +5,7 @@
     <div class="content_outer">
       <div class="content_container">
         <div class="about_page standard_container">
-      <p>Contact Me!</p>
+      <p class="header2">Contact Me!</p>
       {% if request.user.is_authenticated %}
       <p>Hello {{curuser.first_name}}!</p>
       {% else %}
