--- a/textchange/templates/textchange/wishlisting.html
+++ b/textchange/templates/textchange/wishlisting.html
@@ -5,14 +5,11 @@
 
     <div class="content_container">
       <div class="manage_container standard_container">
-      <div class="">
-      <p>Your Postings</p>
-      <span>Click on the book to view more details.</span><br />
-      </div>
+
 
       <div class="">
         <div class="">
-          <p>Your Postings</p>
+          <p class="header2">Your Postings</p>
           <div class="wishlisting_table">
             {% if not postings %}
               <div><div><p>You do not currently have any postings.</p></div></div>
