--- a/textchange/static/textchange/mycss.css
+++ b/textchange/static/textchange/mycss.css
@@ -26,7 +26,7 @@ input:-moz-placeholder {
   color: #7D7D7D;
 }
 p {
-  color: var(--darknight);
+  color: var(--emperor);
 }
 :root {
   --emperor: #2e2e2e;
@@ -37,6 +37,52 @@ p {
   --header3: 16px;
   --std-text: 14px;
 }
+.branding {
+  font-size: var(--branding);
+  font-family: 'SourceSansPro-SemiBold';
+  margin: 25px 0px 20px 0px;
+}
+.header {
+  font-size: var(--header);
+}
+.topheader2 {
+  font-size: var(--header2);
+  font-family: 'SourceSansPro-SemiBold';
+  margin: 25px 0px 5px 0px;
+  color: var(--emperor);
+}
+.header2 {
+  font-size: var(--header2);
+  font-family: 'SourceSansPro-SemiBold';
+  margin: 20px 0px 5px 0px;
+  color: var(--emperor);
+}
+.basic-text {
+  font-size: var(--header3);
+  margin: 0px;
+  color: var(--emperor);
+}
+.basic-text--space {
+  font-size: var(--header3);
+  margin: 5px 0 5px 0;
+  color: var(--emperor);
+}
+.header3 {
+  font-size: var(--header3);
+  margin: 15px 0px 5px 0px;
+  color: var(--emperor);
+}
+.semibold {
+  font-family: 'SourceSansPro-SemiBold';
+}
+.description_text {
+  color: var(--grey);
+  font-size: var(--std-text);
+}
+.description_text {
+  color: var(--grey) !important;
+}
+
 @font-face {
   font-family: 'SourceSansPro';
   src: url('fonts/SourceSansPro-Regular.ttf');
@@ -46,15 +92,12 @@ p {
   src: url('fonts/SourceSansPro-Semibold.ttf');
 }
 
-.semibold {
-  font-family: 'SourceSansPro-SemiBold';
-}
-.description_text {
-  color: var(--grey) !important;
-}
-
 #landing_page {
   background: linear-gradient(180deg, #4EA9F6 , #3583D0);
+  -moz-transition: all .2s ease-in;
+  -o-transition: all .2s ease-in;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
 }
 
 .standard_container.results_container {
@@ -86,7 +129,8 @@ p {
 .results_returned {
   text-align: left;
   padding-bottom: 4px;
-  font-size: 18px;
+  font-size: var(--header2);
+  padding-left: 8px;
 }
 .noresults {
   float: right;
@@ -94,7 +138,6 @@ p {
   color: red;
 }
 .results_table div {
-  height: 30px;
   display: inline-block;
   background-color: white;
 }
@@ -104,8 +147,6 @@ p {
   width: 100%;
   text-align: left;
   text-decoration: none;
-  padding-top: 4px;
-  padding-bottom: 4px;
 }
 .results_top-left {
   float: left;
@@ -117,7 +158,7 @@ p {
   border-left: 1px solid #E3E3E3;
 }
 .results_top-left a {
-  padding-left: 8px;
+  padding: 10px 0px 2px 16px;
   color: var(--emperor);
 }
 .results_bottom-left {
@@ -129,7 +170,7 @@ p {
   border-left: 1px solid #E3E3E3;
 }
 .results_bottom-left a {
-  padding-left: 8px;
+  padding: 2px 0px 10px 16px;
 }
 .results_top-right {
   float: right;
@@ -138,10 +179,9 @@ p {
   border-right: 1px solid #E3E3E3;
 }
 .results_top-right a {
-  padding-right: 8px;
+  padding: 10px 16px 2px 16px;
   color: var(--emperor);
   text-align: right;
-  padding-left: 8px;
 }
 .results_bottom-right {
   float: right;
@@ -149,9 +189,8 @@ p {
   border-right: 1px solid #E3E3E3;
 }
 .results_bottom-right a {
-  padding-right: 8px;
+  padding: 2px 16px 10px 16px;
   text-align: right;
-  padding-left: 8px;
 }
 
 
@@ -170,18 +209,6 @@ p {
   text-align: left;
   color: var(--emperor);
 }
-.help_page h1 {
-  font-size: var(--branding);
-  margin: 20px 0px 20px 0px;
-}
-.help_page h2 {
-  font-size: var(--header2);
-  margin: 20px 0px 10px 0px;
-}
-.help_page p {
-  font-size: var(--header3);
-  margin: 10px 0px 20px 0px;
-}
 .help_page span {
   display: block;
 }
@@ -191,7 +218,7 @@ p {
   color: var(--grey);
 }
 .backtotop:hover {
-  color: var(--darknight);
+  color: var(--emperor);
 }
 .help_page span a {
   color: var(--grey);
@@ -207,7 +234,7 @@ p {
   color: var(--emperor);
 }
 .help_page hr {
-  margin-top: 15px;
+  margin-top: 20px;
   margin-bottom: 5px;
   border: 0;
   border-top: 1px solid #CFCFCF;
@@ -362,24 +389,16 @@ p {
   background-repeat: no-repeat;
 }
 
-.post_info {
-  width: 50%;
-  float: left;
-}
+
 .post_info p {
   text-align: left;
-}
-.post_image {
-  width: 50%;
-  float: right;
 }
 
 .add_a_textbook {
   font-family: 'SourceSansPro-SemiBold';
+  text-align: left;
   display: block;
   margin-bottom: 12px;
-  padding: 20px 0px 20px 0px;
-  font-size: 20px;
 }
 .add_posting_table {
   width: 80vw;
@@ -525,10 +544,6 @@ p {
   width: 100%;
   background-color: transparent;
 }
-.header .leftheader {
-  float: left;
-  padding: 15px 0 0 50px;
-}
 .header_invisible .leftheader {
   float: left;
   padding: 4% 0 0 4%;
@@ -546,19 +561,12 @@ p {
   font-size: 25px;
   font-family: 'SourceSansPro-SemiBold';
 }
-.header .rightheader {
-  float: right;
-  display: inline-block;
-  padding: 21px 50px 0 0;
-}
+
 .rightheader a {
   text-decoration: none;
+  font-size: var(--header3);
 }
-.header_invisible .rightheader {
-  float: right;
-  padding: 4% 4% 0 0;
-  display: inline-block;
-}
+
 
 
 
