--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -5,7 +5,7 @@
     <div class="content_outer">
       <div class="content_container">
         <div class="about_page standard_container">
-      <p class="header2">Contact Me!</p>
+      <p class="header2">Contact Us</p>
       {% if request.user.is_authenticated %}
       <p>Hello {{curuser.first_name}}!</p>
       {% else %}
@@ -38,23 +38,23 @@
 
     <div class="contact_profile">
       <div class="codecruncher">
-      <img class="contactpic" src="../../static/textchange/Sharepic.png">
+      <img class="contactpic" src="../../static/textchange/joe.jpg">
         <div class="contactdescription">
           <p>Joe Czepil</p>
           <p class="description_text">Code Cruncher</p>
-          <p><a><img class="contacticon" src="../../static/textchange/Sharepic.png"></a>
-            <a><img class="contacticon" src="../../static/textchange/Sharepic.png"></a>
-            <a><img class="contacticon" src="../../static/textchange/Sharepic.png"></a></p>
+          <p><a target="_blank" href="https://www.linkedin.com/in/joeczepil"><img class="contacticon" src="../../static/textchange/linkedin.svg"></a>
+            <a target="_blank" href="https://github.com/ProgrammingJoe"><img class="contacticon" src="../../static/textchange/github.svg"></a>
+            <a target="_blank" href="https://twitter.com/BanJoe_Kazooie"><img class="contacticon" src="../../static/textchange/twitter.svg"></a></p>
         </div>
       </div>
       <div class="pixelninja">
-      <img class="contactpic" src="../../static/textchange/Sharepic.png">
+      <img class="contactpic" src="../../static/textchange/IMG_0574.png">
         <div class="contactdescription">
           <p>Spencer Marsh</p>
           <p class="description_text">Pixel Ninja</p>
-          <p><a><img class="contacticon" src="../../static/textchange/Sharepic.png"></a>
-            <a><img class="contacticon" src="../../static/textchange/Sharepic.png"></a>
-            <a><img class="contacticon" src="../../static/textchange/Sharepic.png"></a></p>
+          <p><a target="_blank" href="https://www.linkedin.com/in/spencer-marsh-869b6770"><img class="contacticon" src="../../static/textchange/linkedin.svg"></a>
+            <a target="_blank" href="https://dribbble.com/spencermarsh"><img class="contacticon" src="../../static/textchange/dribbble.svg"></a>
+            <a target="_blank" href="https://www.instagram.com/spencermarsh/"><img class="contacticon" src="../../static/textchange/instagram.svg"></a></p>
         </div>
       </div>
     </div>
