--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -5,7 +5,7 @@
     <div class="content_container">
       <div class="standard_container">
       <div class="post_info">
-        <p class="topheader2">Textbook Info</p>
+        <p class="branding">Textbook Info</p>
           <p class="basic-text--space"><span class="semibold">Textbook:</span> {{ posting.textbook.textbook_name|title }}</p>
           <p class="basic-text--space"><span class="semibold">Author:</span> {{ posting.textbook.author|title }}</p>
           <p class="basic-text--space"><span class="semibold">Price:</span> {{ posting.price }}</p>
