--- a/textchange/templates/textchange/login.html
+++ b/textchange/templates/textchange/login.html
@@ -7,7 +7,7 @@
 <div class="content_outer">
   <div class="content_container login_content_container">
       <div class="login_container">
-        <p class="header2">texchange</p>
+        <p class="branding">texchange</p>
         <a class="close_login" href="{% url 'textchange:index' %}"></a>
         <p class="login_sorry">We don't like this part either but, this is to connect you with other great people on texchange.</p>
         <span><a class="facebook_login" href="{% url 'social:begin' 'facebook' %}?next=/"><span class="primary_facebook">Continue with Facebook. </br><span class="secondary_facebook">We won't post without asking, promise.</span></span></a>
