--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -60,5 +60,5 @@
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="UVic Texchange" />
   <meta property="og:description"   content="Making textbook exchange at UVic easy!" />
-  <meta property="og:image"         content="https://texchangedb.s3.amazonaws.com/textchange/Sharepic.png" />
+  <meta property="og:image"         content="https://texchangedb.s3.amazonaws.com/textchange/share-orange.png" />
 </head>
