--- a/textchange/static/textchange/browser.css
+++ b/textchange/static/textchange/browser.css
@@ -7,6 +7,9 @@
 }
 .content_container.login_content_container {
   top: 90px;
+  height: calc(100vh - 150px);
+  min-height: 400px;
+  border-radius: 4px;
 }
 
 .header .leftheader {
@@ -27,9 +30,13 @@
 .login_container {
   height: 340px;
   position: relative;
-  width: 80vw;
-  max-width: 600px;
+  width: 60vw;
+  max-width: 500px;
   padding: 0px 35px 0px 35px;
+}
+.login_sorry {
+  color: var(--grey);
+  max-width: 490px;
 }
 .content_container {
   top: 65px;
@@ -120,7 +127,8 @@
   font-size: 15px;
   background-size: 20px 20px;
   background-repeat: no-repeat;
-  background-position: 11px 10px;
+  background-position: 10px 10px;
+  cursor: pointer;
   text-indent: -100px;
 }
 
@@ -169,11 +177,15 @@
   border: none;
   top: 9px;
   width: 30vw;
-  padding-left: 16px;
+  padding-left: 14px;
   min-width: 160px;
   max-width: 220px;
+  color: #7D7D7D;
   border-left: 1px solid #DBDBDB;
   border-right: 1px solid #DBDBDB;
+  border-radius: 0 0 0 0;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
 }
 .results-search-form #search {
   border: none;
@@ -182,10 +194,10 @@
   color: #7D7D7D;
   width: 42px;
   top: 8px;
-  border-left: 1px solid #DBDBDB;
   margin-left: -5px;
   border-right: 1px solid #DBDBDB;
   position: relative;
+  cursor: pointer;
   display: inline-block;
   background-image: url("mag-glass.svg");
   font-size: 16px;
@@ -213,11 +225,12 @@
   display: inline-block;
 }
 .codecruncher {
-  width: calc(50% - 10px);
+  width: calc(50% - 20px);
   float: left;
-  margin-left: 10px;
+  padding-left: 20px;
 }
 .pixelninja {
-  width: 50%;
+  width: calc(50% - 20px);
   float: right;
+  padding-left: 20px;
 }
