--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -36,22 +36,22 @@
 
     <div class="contact_profile">
       <div class="codecruncher">
-      <img class="contactpic" src="../../static/textchange/joe.jpg">
+      <img class="contactpic" src="{% static '/textchange/joe.jpg' %}">
         <div class="contactdescription">
           <p class="name">Joe Czepil</p>
           <p class="description_text">Code Cruncher</p>
-          <p><a target="_blank" href="https://www.linkedin.com/in/joeczepil"><img class="contacticon" src="../../static/textchange/linkedin.svg"></a>
-            <a target="_blank" href="https://github.com/ProgrammingJoe"><img class="contacticon" src="../../static/textchange/github.svg"></a>
-            <a target="_blank" href="https://twitter.com/BanJoe_Kazooie"><img class="contacticon" src="../../static/textchange/twitter.svg"></a></p>
+          <p><a target="_blank" href="https://www.linkedin.com/in/joeczepil"><img class="contacticon" src="{% static '/textchange/linkedin.svg' %}"></a>
+            <a target="_blank" href="https://github.com/ProgrammingJoe"><img class="contacticon" src="{% static '/textchange/github.svg' %}"></a>
+            <a target="_blank" href="https://twitter.com/BanJoe_Kazooie"><img class="contacticon" src="{% static '/textchange/twitter.svg' %}"></a></p>
         </div>
       </div>
       <div class="pixelninja">
-      <img class="contactpic" src="../../static/textchange/IMG_0574.png">
+      <img class="contactpic" src="{% static '/textchange/IMG_0574.png' %}">
         <div class="contactdescription">
           <p class="name">Spencer Marsh</p>
           <p class="description_text">Pixel Ninja</p>
-          <p><a target="_blank" href="https://www.linkedin.com/in/spencer-marsh-869b6770"><img class="contacticon" src="../../static/textchange/linkedin.svg"></a>
-            <a target="_blank" href="https://dribbble.com/spencermarsh"><img class="contacticon" src="../../static/textchange/dribbble.svg"></a>
+          <p><a target="_blank" href="https://www.linkedin.com/in/spencer-marsh-869b6770"><img class="contacticon" src="{% static '/textchange/linkedin.svg' %}"></a>
+            <a target="_blank" href="https://dribbble.com/spencermarsh"><img class="contacticon" src="{% static '/textchange/dribbble.svg' %}"></a>
             <a target="_blank" href="https://www.instagram.com/spencermarsh/"><img class="contacticon" src="{% static '/textchange/instagram.svg' %}"></a></p>
         </div>
       </div>
