--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -26,7 +26,7 @@
 
       <div class="post_image">
         {% if posting.image.url %}
-          <img src="../../static/textchange/Sharepic.png" id="">
+          <img src="{{ posting.image.url }}" id="">
           {% else %}
           <p>No image</p>
         {% endif %}
