--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -28,7 +28,7 @@
         {% if 'postingpics/2016' not in posting.image.url %}
           <img src="{{ posting.image.url }}" id="">
           {% else %}
-          <p>I am afraid the user did not attach an image of the textbook or the image is from a date before 2017.</p>
+          <p>No Image</p>
         {% endif %}
       </div>
     </div>
