--- a/textchange/templates/textchange/navbar.html
+++ b/textchange/templates/textchange/navbar.html
@@ -41,7 +41,7 @@ window.onclick = function(event) {
               <a class="btn btn-lg btn-success option" href="{% url 'textchange:wishlisting' %}" role="button">Manage Postings</a>
               <a class="btn btn-lg btn-success option" href="{% url 'textchange:about' %}" role="button">Contact</a>
               <a class="btn btn-lg btn-success option" href="{% url 'textchange:help' %}" role="button">Help</a>
-              <a class="btn btn-lg btn-success option" href="https://www.facebook.com/UvicTexchange" class="bottomdropdown" role="button">Like us on Facebook!</a>
+              <a class="btn btn-lg btn-success option" href="https://www.facebook.com/TexchangeApp" class="bottomdropdown" role="button">Like us on Facebook!</a>
               <a href="{% url 'textchange:navbar' %}" class="logout">Logout</a>
           </div>
         </div>
